--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <h1>Accelerometer Data</h1>
 
-    <button id="toggleFetching">Start Fetching Data</button>
-
-    <canvas id="accelerometerChart" width="400" height="200"></canvas>
-
     <div id="accelerometerData">
         <p>X: <span id="xValue">-</span></p>
         <p>Y: <span id="yValue">-</span></p>
         <p>Z: <span id="zValue">-</span></p>
     </div>
+
+    <button id="toggleFetching">Start Fetching Data</button>
+
+    <canvas id="accelerometerChart" width="400" height="200"></canvas>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -29,24 +29,23 @@
         // Create the chart context
         const ctx = document.getElementById('accelerometerChart').getContext('2d');
         const accelerometerChart = new Chart(ctx, {
-            type: 'line',
+            type: 'scatter',
             data: {
-                labels: [],
                 datasets: [
                     {
                         label: 'X',
                         borderColor: 'rgb(255, 99, 132)',
-                        data: accelerometerChartData.map(entry => entry.x),
+                        data: accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.x })),
                     },
                     {
                         label: 'Y',
                         borderColor: 'rgb(75, 192, 192)',
-                        data: accelerometerChartData.map(entry => entry.y),
+                        data: accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.y })),
                     },
                     {
                         label: 'Z',
                         borderColor: 'rgb(54, 162, 235)',
-                        data: accelerometerChartData.map(entry => entry.z),
+                        data: accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.z })),
                     },
                 ],
             },
@@ -66,30 +65,23 @@
 
         // Function to update the chart with new data
         const updateChart = () => {
-            accelerometerChart.data.labels.push(new Date().toLocaleTimeString());
-            accelerometerChart.data.datasets[0].data.push(x);
-            accelerometerChart.data.datasets[1].data.push(y);
-            accelerometerChart.data.datasets[2].data.push(z);
+            const timestamp = new Date().toLocaleTimeString();
+            accelerometerChartData.push({ timestamp, x, y, z });
 
             // Limit the number of data points to keep the chart clean
             const maxDataPoints = 10;
-            if (accelerometerChart.data.labels.length > maxDataPoints) {
-                accelerometerChart.data.labels.shift();
-                accelerometerChart.data.datasets[0].data.shift();
-                accelerometerChart.data.datasets[1].data.shift();
-                accelerometerChart.data.datasets[2].data.shift();
+            if (accelerometerChartData.length > maxDataPoints) {
+                accelerometerChartData.shift();
             }
 
+            // Update the chart
             accelerometerChart.update();
 
             // Log chart data for debugging
-            console.log('Chart Labels:', accelerometerChart.data.labels);
-            console.log('Chart Data X:', accelerometerChart.data.datasets[0].data);
-            console.log('Chart Data Y:', accelerometerChart.data.datasets[1].data);
-            console.log('Chart Data Z:', accelerometerChart.data.datasets[2].data);
+            console.log('Chart Data:', accelerometerChartData);
 
             // Update every 2s (2000) or 0.2 (200)
-            setTimeout(updateAccelerometerData, 2000);
+            setTimeout(updateAccelerometerData, 200);
         };
 
         const updateAccelerometerData = () => {
@@ -99,14 +91,20 @@
                     method: 'GET',
                     dataType: 'json',
                     success: (data) => {
-                        $('#xValue').text(data.x);
-                        $('#yValue').text(data.y);
-                        $('#zValue').text(data.z);
-
-                        // Update the chart with new data
+                        // Update the values
                         x = data.x;
                         y = data.y;
                         z = data.z;
+
+                        // Log values for debugging
+                        console.log('X:', x, 'Y:', y, 'Z:', z);
+
+                        // Update the displayed values
+                        $('#xValue').text(x);
+                        $('#yValue').text(y);
+                        $('#zValue').text(z);
+
+                        // Update the chart with new data
                         updateChart();
                     },
                     error: (xhr, status, error) => {
