--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
                         label: 'X',
                         borderColor: 'rgb(255, 99, 132)',
                         data: [],
+                        cubicInterpolationMode: 'monotone',
                     },
                     {
                         label: 'Y',
                         borderColor: 'rgb(75, 192, 192)',
                         data: [],
+                        cubicInterpolationMode: 'monotone',
                     },
                     {
                         label: 'Z',
                         borderColor: 'rgb(54, 162, 235)',
                         data: [],
+                        cubicInterpolationMode: 'monotone',
                     },
                 ],
             },
@@ -77,7 +80,7 @@
             accelerometerChart.data.datasets[2].data = accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.z }));
 
             // Limit the number of data points to keep the chart clean
-            const maxDataPoints = 100;
+            const maxDataPoints = 20; // Adjust the maximum data points based on your preference
             if (accelerometerChartData.length > maxDataPoints) {
                 accelerometerChartData.shift();
             }
