make chart full screen

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="container">
-        <h1>Accelerometer Data</h1>
+        <h1 class="title">Accelerometer Data</h1>
 
         <div class="data-container">
             <div class="data-item">
                 <p>X:</p>
-                <span id="xValue">-</span>
+                <span id="xValue" class="value">-</span>
             </div>
             <div class="data-item">
                 <p>Y:</p>
-                <span id="yValue">-</span>
+                <span id="yValue" class="value">-</span>
             </div>
             <div class="data-item">
                 <p>Z:</p>
-                <span id="zValue">-</span>
+                <span id="zValue" class="value">-</span>
             </div>
         </div>
 
