--- a/index.html
+++ b/index.html
@@ -4,36 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accelerometer Data App</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Accelerometer Data</h1>
+    <h1>Accelerometer Data</h1>
 
-        <div class="data-container">
-            <div class="data-item">
-                <p>X:</p>
-                <span id="xValue">-</span>
-            </div>
-            <div class="data-item">
-                <p>Y:</p>
-                <span id="yValue">-</span>
-            </div>
-            <div class="data-item">
-                <p>Z:</p>
-                <span id="zValue">-</span>
-            </div>
-        </div>
-
-        <button id="toggleFetching" class="fetch-button">Start Fetching Data</button>
-
-        <div class="chart-container" style="position: relative; height: 60vh; width: 80vw;">
-            <canvas id="accelerometerChart"></canvas>
-        </div>
+    <div id="accelerometerData">
+        <p>X: <span id="xValue">-</span></p>
+        <p>Y: <span id="yValue">-</span></p>
+        <p>Z: <span id="zValue">-</span></p>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <button id="toggleFetching">Start Fetching Data</button>
+
+    <canvas id="accelerometerChart" width="400" height="100"></canvas>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script>let isFetchingStarted = false;
+        let x, y, z;
+        let timestampCounter = 0;
+        let isThresholdExceeded = false; // New variable to track threshold exceeding
+
+        // Create an empty array to store accelerometer data for chart
+        let accelerometerChartData = [];
+
+        // Create the chart context
+        const ctx = document.getElementById('accelerometerChart').getContext('2d');
+        const accelerometerChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                datasets: [
+                    {
+                        label: 'X',
+                        borderColor: 'rgb(255, 99, 132)',
+                        data: [],
+                        cubicInterpolationMode: 'monotone',
+                    },
+                    {
+                        label: 'Y',
+                        borderColor: 'rgb(75, 192, 192)',
+                        data: [],
+                        cubicInterpolationMode: 'monotone',
+                    },
+                    {
+                        label: 'Z',
+                        borderColor: 'rgb(54, 162, 235)',
+                        data: [],
+                        cubicInterpolationMode: 'monotone',
+                    },
+                ],
+            },
+            options: {
+                animation: {
+                    duration: 0, // Turn off animation
+                },
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom',
+                        ticks: {
+                            stepSize: 1, // Adjust the step size based on your preference
+                        },
+                    },
+                    y: {
+                        type: 'linear',
+                        position: 'left',
+                    },
+                },
+            },
+        });
+
+        // Function to update the chart with new data
+        const updateChart = () => {
+            accelerometerChart.data.datasets[0].data = accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.x }));
+            accelerometerChart.data.datasets[1].data = accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.y }));
+            accelerometerChart.data.datasets[2].data = accelerometerChartData.map(entry => ({ x: entry.timestamp, y: entry.z }));
+
+            // Limit the number of data points to keep the chart clean
+            const maxDataPoints = 20; // Adjust the maximum data points based on your preference
+            if (accelerometerChartData.length > maxDataPoints) {
+                accelerometerChartData.shift();
+            }
+
+            // Update the chart
+            accelerometerChart.update();
+
+            // Log chart data for debugging
+            console.log('Chart Data:', accelerometerChart.data);
+
+            // Update every 2s (2000) or 0.2 (200)
+            setTimeout(updateAccelerometerData, 200);
+        };
+
+        const updateAccelerometerData = () => {
+            if (isFetchingStarted) {
+                $.ajax({
+                    url: '/api/accelerometer',
+                    method: 'GET',
+                    dataType: 'json',
+                    success: (data) => {
+                        // Update the values
+                        x = data.x;
+                        y = data.y;
+                        z = data.z;
+
+                        // Log values for debugging
+                        console.log('X:', x, 'Y:', y, 'Z:', z);
+
+                        // Update the displayed values
+                        $('#xValue').text(x);
+                        $('#yValue').text(y);
+                        $('#zValue').text(z);
+
+                        // Check if any value is below -2 or above 2
+                        if (x < -2 || x > 2 || y < -2 || y > 2 || z < -2 || z > 2) {
+                            isThresholdExceeded = true; // Set threshold exceeded flag
+                            alert('Warning: Accelerometer threshold exceeded!');
+                        }
+
+                        // Update the chart with new data
+                        accelerometerChartData.push({ timestamp: timestampCounter++, x, y, z });
+                        updateChart();
+                    },
+                    error: (xhr, status, error) => {
+                        console.error('Error fetching accelerometer data:', xhr, status, error);
+                        setTimeout(updateAccelerometerData, 200);
+                    }
+                });
+            }
+        };
+
+        $('#toggleFetching').click(() => {
+            isFetchingStarted = !isFetchingStarted;
+            const buttonLabel = isFetchingStarted ? 'Stop Fetching Data' : 'Start Fetching Data';
+            $('#toggleFetching').text(buttonLabel);
+
+            if (isFetchingStarted) {
+                updateAccelerometerData();
+            }
+        });</script>
 </body>
 </html>
