fixing style issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Z: <span id="zValue">-</span></p>
     </div>
 
-    <button id="toggleFetching">Start Fetching Data</button>
+    <button id="toggleFetching" class="fetch-button">Start Fetching Data</button>
 
     <canvas id="accelerometerChart" width="400" height="100"></canvas>
 
