--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <button id="toggleFetching" class="fetch-button">Start Fetching Data</button>
 
-    <canvas id="accelerometerChart" width="400" height="100"></canvas>
+    <canvas id="accelerometerChart" width="400" height="200"></canvas>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -66,12 +66,52 @@
                         ticks: {
                             stepSize: 1, // Adjust the step size based on your preference
                         },
+                        scaleLabel: {
+                            display: true,
+                            labelString: 'Time Interval' // Add label for x-axis
+                        },
                     },
                     y: {
                         type: 'linear',
                         position: 'left',
+                        scaleLabel: {
+                            display: true,
+                            labelString: 'Accelerometer Position' // Add label for y-axis
+                        },
                     },
                 },
+                plugins: {
+                    annotation: {
+                        annotations: {
+                            line1: {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x',
+                                value: 0, // Adjust the value according to your preference
+                                borderColor: 'red',
+                                borderWidth: 1,
+                                label: {
+                                    content: 'Accelerometer Position', // Label for the vertical line
+                                    enabled: true,
+                                    position: 'top'
+                                }
+                            },
+                            line2: {
+                                type: 'line',
+                                mode: 'horizontal',
+                                scaleID: 'y',
+                                value: 0, // Adjust the value according to your preference
+                                borderColor: 'green',
+                                borderWidth: 1,
+                                label: {
+                                    content: 'Time Interval', // Label for the horizontal line
+                                    enabled: true,
+                                    position: 'right'
+                                }
+                            }
+                        }
+                    }
+                }
             },
         });
 
