--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                                     position: 'top',
                                     backgroundColor: 'rgba(255, 255, 255, 0.5)',
                                     fontSize: 10,
+                                    padding: {
+                                        top: 4,
+                                        bottom: 4,
+                                        left: 4,
+                                        right: 4
+                                    }
                                 }
                             },
                             line2: {
@@ -113,6 +119,12 @@
                                     position: 'right',
                                     backgroundColor: 'rgba(255, 255, 255, 0.5)',
                                     fontSize: 10,
+                                    padding: {
+                                        top: 4,
+                                        bottom: 4,
+                                        left: 4,
+                                        right: 4
+                                    }
                                 }
                             }
                         }
