--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <h1>Accelerometer Data</h1>
 
-    <div id="chartContainer">
-        <div id="xyzValues" style="float: left;"></div>
-        <div id="chartAndControls" style="margin-left: 150px;">
-            <canvas id="accelerometerChart" width="400" height="100"></canvas>
-            <button id="toggleFetching" class="fetch-button">Start Fetching Data</button>
-        </div>
+    <div id="accelerometerData">
+        <p>X: <span id="xValue">-</span></p>
+        <p>Y: <span id="yValue">-</span></p>
+        <p>Z: <span id="zValue">-</span></p>
     </div>
+
+    <button id="toggleFetching" class="fetch-button">Start Fetching Data</button>
+
+    <canvas id="accelerometerChart" width="400" height="100"></canvas>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -115,7 +117,9 @@
                         y = data.y;
                         z = data.z;
 
-                        $('#xyzValues').prepend(`<p>X: ${x}, Y: ${y}, Z: ${z}</p>`);
+                        $('#xValue').text(x);
+                        $('#yValue').text(y);
+                        $('#zValue').text(z);
 
                         if (x < -2 || x > 2 || y < -2 || y > 2 || z < -2 || z > 2) {
                             isThresholdExceeded = true;
